--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "port":80,
-  "___port-comment":"port to listen by app"
+  "___port-comment":"port to listen by app",
   "username":"your webdav username",
   "password":"your password",
   "host":"your webdav hostname"
